--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.16.1",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -17,6 +18,7 @@
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
     "css-loader": "0.28.7",
+    "d3": "^5.9.2",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "enzyme": "^3.3.0",
@@ -50,6 +52,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-svg-text": "^0.1.2",
     "react-virtualized": "^9.21.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
